istio-service-mesh-security/manifests/30-traffic.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backend
  namespace: mesh-lab
spec:
  host: backend.mesh-lab.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 20
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend
  namespace: mesh-lab
spec:
  hosts:
    - backend.mesh-lab.svc.cluster.local
  http:
    - timeout: 2s
      retries:
        attempts: 2
        perTryTimeout: 500ms
        retryOn: 5xx,reset,connect-failure,refused-stream
      route:
        - destination:
            host: backend.mesh-lab.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: backend.mesh-lab.svc.cluster.local
            subset: v2
          weight: 10
